--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   },
   "dependencies": {
     "expo": "~49.0.11",
+    "expo-pixi": "^2.1.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-signature-canvas": "^4.6.1",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react": "^7.33.2",
     "typescript": "^5.1.3"
   },
   "private": true
