--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-signature-canvas": "^4.6.1",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "@shopify/react-native-skia": "0.1.196"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
